@@ -1,14 +1,18 @@
 package com.rin.kanban.service;
 
 import com.rin.kanban.dto.request.ProductRequest;
+import com.rin.kanban.dto.response.ProductHasSubProductsResponse;
 import com.rin.kanban.dto.response.ProductResponse;
 import com.rin.kanban.entity.Category;
 import com.rin.kanban.entity.Product;
+import com.rin.kanban.entity.SubProduct;
 import com.rin.kanban.exception.AppException;
 import com.rin.kanban.exception.ErrorCode;
 import com.rin.kanban.mapper.ProductMapper;
+import com.rin.kanban.mapper.SubProductMapper;
 import com.rin.kanban.repository.CategoryRepository;
 import com.rin.kanban.repository.ProductRepository;
+import com.rin.kanban.repository.SubProductRepository;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -17,6 +21,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,7 +31,8 @@ public class ProductService {
     ProductRepository productRepository;
     ProductMapper productMapper;
     CategoryRepository categoryRepository;
-
+    SubProductRepository subProductRepository;
+    SubProductMapper subProductMapper;
     public ProductResponse createProduct(ProductRequest productRequest) {
         Product product = productMapper.toProduct(productRequest);
         HashSet<Category> categories = new HashSet<>();
@@ -48,8 +54,17 @@ public class ProductService {
     public ProductResponse getProduct(String productId) {
         return productMapper.toProductResponse(productRepository.findById(productId).orElseThrow());
     }
-    public List<ProductResponse> getProducts() {
-        return productRepository.findAll().stream().map(productMapper::toProductResponse).toList();
+    public List<ProductHasSubProductsResponse> getProducts() {
+        List<Product> products = productRepository.findAll();
+        List<ProductHasSubProductsResponse> responses = products.parallelStream().map(product -> {
+            ProductHasSubProductsResponse response = productMapper.toProductHasSubProductsResponse(product);
+            List<SubProduct> subProducts = subProductRepository.findByProductId(product.getId());
+
+            if(!subProducts.isEmpty())
+                response.setSubProductResponse(subProducts.stream().map(subProductMapper::toSubProductResponse).toList());
+            return response;
+        }).collect(Collectors.toList());
+        return responses;
     }
     public ProductResponse updateProduct(String productId, ProductRequest productRequest) {
         Product product = productRepository.findById(productId).orElseThrow(() ->new AppException(ErrorCode.PRODUCT_NOT_FOUND));
